--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript",
+  "name": "typescript-learning",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/googlemaps": "^3.43.0",
     "axios": "^0.21.0",
+    "faker": "^5.1.0",
     "lite-server": "^2.6.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.14"
+    "@types/faker": "^5.1.5",
+    "@types/node": "^14.14.14",
+    "typescript": "^4.1.3"
   }
 }
